Employee CRUD, Return 204 No content on delete and on logout
