# public/openapi.yaml
@@ -45,7 +45,154 @@ paths:
       description: 'Logout a user.'
       operationId: AuthController.logout
       responses:
+        '204':
+          description: 'No content'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: { type: string, example: 'Invalid credentials.' }
+                type: object
+      security:
+        -
+          BearerToken: []
+  /api/employees:
+    get:
+      tags:
+        - employees
+      summary: 'Show employees'
+      description: 'Display a listing of the resource.'
+      operationId: EmployeeController.index
+      responses:
         '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EmployeeResource'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: { type: string, example: 'Invalid credentials.' }
+                type: object
+      security:
+        -
+          BearerToken: []
+    post:
+      tags:
+        - employees
+      summary: 'Create a employee'
+      description: 'Store a newly created resource in storage.'
+      operationId: EmployeeController.store
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StoreEmployeeRequest'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmployeeResource'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: { type: string, example: 'Invalid credentials.' }
+                type: object
+      security:
+        -
+          BearerToken: []
+  '/api/employees/{employee_uuid}':
+    get:
+      tags:
+        - employees
+      summary: 'Show a specific employee'
+      description: 'Display a listing of the resource.'
+      operationId: EmployeeController.show
+      parameters:
+        -
+          name: employee_uuid
+          in: path
+          required: true
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmployeeResource'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: { type: string, example: 'Invalid credentials.' }
+                type: object
+      security:
+        -
+          BearerToken: []
+    put:
+      tags:
+        - employees
+      summary: 'Update a employee'
+      description: 'Update the specified resource in storage.'
+      operationId: EmployeeController.update
+      parameters:
+        -
+          name: employee_uuid
+          in: path
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateEmployeeRequest'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmployeeResource'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: { type: string, example: 'Invalid credentials.' }
+                type: object
+      security:
+        -
+          BearerToken: []
+    delete:
+      tags:
+        - employees
+      summary: 'Delete a employee'
+      description: 'Remove the specified resource from storage.'
+      operationId: EmployeeController.destroy
+      parameters:
+        -
+          name: employee_uuid
+          in: path
+          required: true
+      responses:
+        '204':
           description: 'No content'
         '401':
           description: Unauthorized
@@ -192,7 +339,7 @@ paths:
           in: path
           required: true
       responses:
-        '200':
+        '204':
           description: Ok
         '401':
           description: Unauthorized
@@ -244,6 +391,19 @@ components:
           type: string
           example: '123456'
       type: object
+    StoreEmployeeRequest:
+      required:
+        - first_name
+        - last_name
+      properties:
+        first_name:
+          description: 'Get the validation rules that apply to the request.'
+          type: string
+          example: John
+        last_name:
+          type: string
+          example: Doe
+      type: object
     StoreSkillRequest:
       required:
         - name
@@ -256,6 +416,19 @@ components:
         description:
           type: string
           example: 'My Skill description'
+      type: object
+    UpdateEmployeeRequest:
+      required:
+        - first_name
+        - last_name
+      properties:
+        first_name:
+          description: 'Get the validation rules that apply to the request.'
+          type: string
+          example: John
+        last_name:
+          type: string
+          example: Doe
       type: object
     UpdateSkillRequest:
       required:
@@ -346,3 +519,6 @@ tags:
   -
     name: skills
     description: Skills
+  -
+    name: employees
+    description: Employees
